[package]
name = "SubdomainFinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
futures = "0.3.30"
reqwest = {version = "0.12.4",features = ["json"]}
scraper = "0.19.0"
tokio = {version = "1.37.0", features = ["full"]}
